# PACSim

./: .gitattributes  .gitignore  AUTHORS.md  README.md  benchmark.ipynb  benchmark.py  benchmark_hoomd.py  gravity.ipynb  gravity.py  pyproject.toml  run.py  run.yaml
.github/workflows/: python-package.yml
benchmarks/: benchmark.py
colloids/: __init__.py  abstracts.py  colloid_forces.py  colloid_potentials.py  colloid_potentials_abstract.py  colloid_potentials_algebraic.py  colloid_potentials_parameters.py  colloid_potentials_tabulated.py  colloid_potentials_tabulated_hoomd.py  colloids_resume.py  colloids_run.py  depletion_potential.py  depletion_potentials_algebraic.py  final_frame.gsd  gravity.py  gsd_reporter.py  hello_colloids.py  helper_functions.py  initial_configuration.gsd  integrators.py  lennard_jones_potential.py  plumed_potential.py  run.yaml  run_parameters.py  shifted_lennard_jones_walls.py  slj_walls.py  slj_walls_parameters.py  status_reporter.py  substrate.py  trajectory.gsd  uniform_magnetic_field.py  units.py  update_reporter.py  update_reporters.py  walls.py  wca_potential.py
colloids/colloids_analyze/: __init__.py  abstracts.py  analysis.yaml  analysis_parameters.py  cluster_analyzer.py  colloids_analyze.py  ovito_modifier.py  (+9 more)
cookbook/: Tutorial.ipynb
gstem/: initial_particle_positions.py  lennard_jones.py  lennard_jones_plumed.py  plot.py
jupyter_scripts/: Asakura-Oosawa_depletion_potential.ipynb  OpenMMCustomNonbondedForce.ipynb  gravity.ipynb  gravity2.ipynb  plot_slj_walls.ipynb  plot_slj_walls_hoomd.ipynb  plot_slj_walls_openMM.ipynb
(+610 files in other folders)
