[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "colloids"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.1"
dependencies = [
    "jupyterlab >= 4.5",
    "matplotlib >= 3.10",
    "numpy >= 2.3",
    "openmm >= 8.4",
    "pytest >= 9.0",
    "gsd >= 4.2",
    "pyyaml >= 6.0",
    "tqdm >= 4.67",
    "pandas >= 2.3",
    "ase >= 3.26",
    "scipy >= 1.16",
    "MDAnalysis >= 2.10",
    "freud-analysis >= 3.5"
]

[project.scripts]
colloids-run = "colloids.colloids_run:main"
colloids-create = "colloids.colloids_create.colloids_create:main"
colloids-analyze = "colloids.colloids_analyze.colloids_analyze:main"
colloids-tune = "colloids.colloids_tune.colloids_tune:main"

[tool.setuptools.packages.find]
exclude = ["Literature", "jupyter-scripts"]
